--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/express": "^4.16.0",
+    "@types/hapi__joi": "^16.0.6",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
