--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "version": "0.0.1",
-  "description": "Nest-js project for practise",
+  "description": "Practice",
   "author": "wind-of",
   "license": "MIT",
   "scripts": {
